--- a/TrainingWPF/TrainingWPF.csproj
+++ b/TrainingWPF/TrainingWPF.csproj
@@ -60,12 +60,15 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="Style\App.xaml">
+    <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Classes\DataBase.cs" />
     <Compile Include="Classes\FrameWork.cs" />
+    <Compile Include="Pages\FirstPage.xaml.cs">
+      <DependentUpon>FirstPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ModelDB\Bludo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -108,24 +111,21 @@
     <Compile Include="ModelDB\Zakaz.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Pages\AdminPage.xaml.cs">
-      <DependentUpon>AdminPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Pages\AdminPage2.xaml.cs">
       <DependentUpon>AdminPage2.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\Registration.xaml.cs">
       <DependentUpon>Registration.xaml</DependentUpon>
     </Compile>
+    <Page Include="Pages\FirstPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\AdminPage2.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\Autorization.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\AdminPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -136,7 +136,7 @@
     <Compile Include="Pages\ShowMenu.xaml.cs">
       <DependentUpon>ShowMenu.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Style\App.xaml.cs">
+    <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -180,6 +180,8 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <Resource Include="Fonts\ofont.ru_Zekton.ttf" />
+    <Resource Include="Fonts\ofont.ru_Sprite Graffiti.ttf" />
     <None Include="ModelDB\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </None>
@@ -212,8 +214,16 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <Content Include="Resources\backgorund.png" />
+    <Resource Include="Resources\background.png" />
+    <Resource Include="Resources\1 половина.png" />
+    <Resource Include="Resources\clipart2680273.png" />
+    <Resource Include="Resources\logoburger.png" />
     <Resource Include="Resources\viewPswrd.png" />
-    <Resource Include="Resources\pngwing.com.png" />
+    <None Include="Resources\silent" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Style\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
